compiler/testData/cli/js/firMultiplatformCompilationWithError.out
warning: advanced option value is passed in an obsolete form. Please use the '=' character to specify the value: -Xcommon-sources=...
warning: ATTENTION!
This build uses unsafe internal compiler arguments:

-XXLanguage:+MultiPlatformProjects

This mode is not recommended for production use,
as no stability/compatibility guarantees are given on
compiler or generated code. Use it at your own risk!

compiler/testData/cli/jvm/firMultiplatformCompilationWithError/common.kt:7:1: error: class 'CommonClass' is not abstract and does not implement abstract member 'foo'.
class CommonClass : B
^^^^^^^^^^^^^^^^^
compiler/testData/cli/jvm/firMultiplatformCompilationWithError/jvm.kt:1:18: error: 'actual interface A : Any' has no corresponding members for expected class members:

    expect fun foo(): Unit

actual interface A
                 ^
COMPILATION_ERROR
